add category controller

--- a/Todoey-iOS15/Views/Base.lproj/Main.storyboard
+++ b/Todoey-iOS15/Views/Base.lproj/Main.storyboard
@@ -63,12 +63,51 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Kx8-O3-tHy" kind="relationship" relationship="rootViewController" id="SjZ-1w-MZj"/>
+                        <segue destination="68x-Bd-feL" kind="relationship" relationship="rootViewController" id="FFu-qF-Zgy"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="obw-g5-aBK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1065" y="78"/>
+            <point key="canvasLocation" x="219" y="78"/>
+        </scene>
+        <!--Items-->
+        <scene sceneID="yOO-qe-KcP">
+            <objects>
+                <tableViewController id="68x-Bd-feL" customClass="CategoryViewController" customModule="Todoey_iOS15" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zLb-hX-mbY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="Itk-N7-GwN">
+                                <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Itk-N7-GwN" id="Zp6-Kx-rlF">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="68x-Bd-feL" id="w24-5d-OVW"/>
+                            <outlet property="delegate" destination="68x-Bd-feL" id="Ej7-tH-4Pc"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Items" id="15I-Av-QT5">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Syp-0A-KBh">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="68x-Bd-feL" id="gf9-DC-uQi"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Kx8-O3-tHy" kind="show" identifier="goToItems" id="u28-Jw-AMb"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jAZ-bm-f33" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1009" y="78"/>
         </scene>
     </scenes>
     <resources>
