add tableView Delegate methods for CategoryViewController

--- a/Todoey-iOS15/Views/Base.lproj/Main.storyboard
+++ b/Todoey-iOS15/Views/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                     <navigationItem key="navigationItem" title="Todoey" id="SAN-ZN-vbI">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="FC3-R9-4qQ">
                             <color key="tintColor" red="0.93725490199999995" green="0.85490196080000003" blue="0.84313725490000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="Kx8-O3-tHy" id="EEL-dD-ci4"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
